Semivirtual and virtual glyphs, optimise UVI definition

--- a/references.bib
+++ b/references.bib
@@ -66,23 +66,7 @@
 	publisher = {North-Holland Publishing Company},
 }
 
-@article{finite-type-invariants-of-w-knotted-objects-I,
-	author = {Dror Bar-Natan and Zsuzsanna Dancso},
-	title = {{Finite-type invariants of w-knotted objects, I: w-knots and
-	         the Alexander polynomial}},
-	volume = {16},
-	journal = {Algebraic \& Geometric Topology},
-	number = {2},
-	publisher = {MSP},
-	pages = {1063 -- 1133},
-	keywords = {Alexander polynomial, associators, finite-type invariants,
-	            free Lie algebras, Kashiwara–Vergne, knotted graphs, Virtual
-	            knots, w-braids, welded knots, w-knots, w-tangles},
-	year = {2016},
-}
-
-
-@article{finite-type-invariants-of-w-knotted-objects-II,
+@article{finite-type-invariants-of-w-knotted-objects-II-tangles-foams-and-the-kashiwara-vergne-problem,
 	title = "Finite type invariants of w-knotted objects II: tangles, foams
 	         and the Kashiwara–Vergne problem",
 	keywords = "57M25",
@@ -392,3 +376,35 @@
 	year = {2024},
 }
 
+
+@article{finite-type-invariants-of-w-knotted-objects-I-w-knots-and-the-alexander-polynomial,
+	author = {Dror Bar-Natan and Zsuzsanna Dancso},
+	title = {{Finite-type invariants of w-knotted objects, I: w-knots and
+	         the Alexander polynomial}},
+	volume = {16},
+	journal = {Algebraic \& Geometric Topology},
+	number = {2},
+	publisher = {MSP},
+	pages = {1063 -- 1133},
+	year = {2016},
+}
+
+@inproceedings{on-the-welded-tube-map,
+	title = {On the welded Tube map},
+	author = {Benjamin Audoux},
+	booktitle = {Knot Theory and Its Applications},
+	journal = {Contemporary Mathematics},
+	volume = {670},
+	publisher = {American Mathematical Society},
+	year = {2016},
+}
+
+@article{virtual-knot-presentation-of-ribbon-torus-knots,
+	author = {SATOH, SHIN},
+	title = {VIRTUAL KNOT PRESENTATION OF RIBBON TORUS-KNOTS},
+	journal = {Journal of Knot Theory and Its Ramifications},
+	volume = {09},
+	number = {04},
+	pages = {531-542},
+	year = {2000},
+}
