--- a/macros.tex
+++ b/macros.tex
@@ -16,6 +16,9 @@
 \newcommand*{\double}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_singular_point.pdf}}}
 \newcommand*{\poscross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_positive_crossing.pdf}}}
 \newcommand*{\negcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_negative_crossing.pdf}}}
+\newcommand*{\virtcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_virtual_crossing.pdf}}}
+\newcommand*{\semivertposcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_semivirtual_positive_crossing.pdf}}}
+\newcommand*{\semivertnegcross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_semivirtual_negative_crossing.pdf}}}
 
 % T4T and T1T graphics
 \newcommand*{\tftsouth}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_south.pdf}}}
