Fix more deltas to be partials

--- a/introduction.tex
+++ b/introduction.tex
@@ -4,3 +4,5 @@
 
 
 \lettrine{\libertineInitialGlyph{T}}{he} introduction goes here.
+
+All knots are assumed to be oriented and framed unless specified otherwise.
